package pt.org.upskill.domain;

import java.util.Objects;

public class Employee {
    private final String email;
    private String name;
    private String position;
    private String phone;

    public Employee(String email) {
        this.email = email;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) {
            return true;
        }
        if (!(o instanceof Employee)) {
            return false;
        }
        Employee employee = (Employee) o;
        return email.equals(employee.email);
    }

    @Override
    public int hashCode() {
        return Objects.hash(email);
    }

    public boolean hasEmail(String email) {
        return this.email.equals(email);
    }

    public Employee clone() {
        return new Employee(this.email);
    }
}